--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -145,6 +145,8 @@ hr.small {
 .intro-header .site-heading,
 .intro-header .post-heading,
 .intro-header .page-heading {
+  position: relative;
+  top: 100px
   padding: 100px 0 50px;
   color: white;
 }
@@ -152,20 +154,28 @@ hr.small {
   .intro-header .site-heading,
   .intro-header .post-heading,
   .intro-header .page-heading {
+    position: relative;
+    top: 100px;
     padding: 150px 0;
   }
 }
 .intro-header .site-heading,
 .intro-header .page-heading {
+  position: relative;
+  top: 100px;
   text-align: center;
 }
 .intro-header .site-heading h1,
 .intro-header .page-heading h1 {
-  margin-top: 0;
+  position: relative;
+  top: 100px;
+  margin-top: -20px;
   font-size: 50px;
 }
 .intro-header .site-heading .subheading,
 .intro-header .page-heading .subheading {
+  position: relative;
+  top: 100px;
   font-size: 24px;
   line-height: 1.1;
   display: block;
@@ -176,6 +186,8 @@ hr.small {
 @media only screen and (min-width: 768px) {
   .intro-header .site-heading h1,
   .intro-header .page-heading h1 {
+    position: relative;
+  top: 100px;
     font-size: 80px;
   }
 }
